# mosaicshade

./: .gitignore  CITATION.cff  README.md  README.qmd  pyproject.toml  setup.py
.github/workflows/: publish.yml  tests.yml
images/: logo.py
mosaicshade/: __init__.py  main.py
tests/: test_main.py
